# PyAHF

./: .gitignore  README.md  pyproject.toml  setup.py
ahf/: BaseMesh.py  BaseSimplexMesh.py  BasicClasses.py  BasicDataTypes.py  MeshFactory.py  SimplexMath.py  SimplexMesh.py  Vtx2HalfFacetMap.py  Vtx2HalfFacet_Mapping.py  __init__.py  __version__.py
experiment/: test_BasicCl.py  test_BasicDT.py  test_FEM.py  test_Vtx2HalfFacetMap.py
src/: Vtx2HalfFacetMap.py  __init__.py  __version__.py
src/PyAHF.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ahf/: BaseSimplexMesh.py  BasicClasses.py  MeshFactory.py  SimplexMath.py  SimplexMesh.py  Vtx2HalfFacet_Mapping.py  __init__.py
src/ahf/fem/: Formulation.py  __init__.py
src_code/: Vtx2HalfFacet_Mapping.py
unit_test_src/: test_Vertex2Halffacet.py
unit_tests/: Backup_of_Non_Manifold_Tetrahedra_1.cdr  BaseSimplexMesh_unittest.py  BasicClasses_unittest.py  MeshFactory_unittest.py  Nonmanifold_Tetrahedra_1.cdr  SimplexMath_unittest.py  SimplexMesh_unittest.py  Vtx2HalfFacet_unittest.py
